docs/apache-airflow-providers-google/8.7.0/_sources/_api/airflow/providers/google/cloud/links/stackdriver/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.stackdriver`
==========================================================

.. py:module:: airflow.providers.google.cloud.links.stackdriver

.. autoapi-nested-parse::

   This module contains Google Stackdriver links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.stackdriver.StackdriverNotificationsLink
   airflow.providers.google.cloud.links.stackdriver.StackdriverPoliciesLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.stackdriver.STACKDRIVER_BASE_LINK
   airflow.providers.google.cloud.links.stackdriver.STACKDRIVER_NOTIFICATIONS_LINK
   airflow.providers.google.cloud.links.stackdriver.STACKDRIVER_POLICIES_LINK


.. py:data:: STACKDRIVER_BASE_LINK
   :annotation: = /monitoring/alerting

   

.. py:data:: STACKDRIVER_NOTIFICATIONS_LINK
   

   

.. py:data:: STACKDRIVER_POLICIES_LINK
   

   

.. py:class:: StackdriverNotificationsLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Stackdriver Notifications Link

   .. py:attribute:: name
      :annotation: = Cloud Monitoring Notifications

      

   .. py:attribute:: key
      :annotation: = stackdriver_notifications

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(operator_instance, context, project_id)
      :staticmethod:



.. py:class:: StackdriverPoliciesLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Stackdriver Policies Link

   .. py:attribute:: name
      :annotation: = Cloud Monitoring Policies

      

   .. py:attribute:: key
      :annotation: = stackdriver_policies

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(operator_instance, context, project_id)
      :staticmethod:



