docs/apache-airflow-providers-google/14.0.0/_sources/_api/airflow/providers/google/cloud/links/stackdriver/index.rst.txt
airflow.providers.google.cloud.links.stackdriver
================================================

.. py:module:: airflow.providers.google.cloud.links.stackdriver

.. autoapi-nested-parse::

   This module contains Google Stackdriver links.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.stackdriver.STACKDRIVER_BASE_LINK
   airflow.providers.google.cloud.links.stackdriver.STACKDRIVER_NOTIFICATIONS_LINK
   airflow.providers.google.cloud.links.stackdriver.STACKDRIVER_POLICIES_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.stackdriver.StackdriverNotificationsLink
   airflow.providers.google.cloud.links.stackdriver.StackdriverPoliciesLink


Module Contents
---------------

.. py:data:: STACKDRIVER_BASE_LINK
   :value: '/monitoring/alerting'


.. py:data:: STACKDRIVER_NOTIFICATIONS_LINK
   :value: '/monitoring/alerting/notifications?project={project_id}'


.. py:data:: STACKDRIVER_POLICIES_LINK
   :value: '/monitoring/alerting/policies?project={project_id}'


.. py:class:: StackdriverNotificationsLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Stackdriver Notifications Link.


   .. py:attribute:: name
      :value: 'Cloud Monitoring Notifications'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'stackdriver_notifications'



   .. py:attribute:: format_str
      :value: '/monitoring/alerting/notifications?project={project_id}'



   .. py:method:: persist(operator_instance, context, project_id)
      :staticmethod:



.. py:class:: StackdriverPoliciesLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Stackdriver Policies Link.


   .. py:attribute:: name
      :value: 'Cloud Monitoring Policies'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'stackdriver_policies'



   .. py:attribute:: format_str
      :value: '/monitoring/alerting/policies?project={project_id}'



   .. py:method:: persist(operator_instance, context, project_id)
      :staticmethod:



